--- a/공공데이터_analysis_yoon.ipynb
+++ b/공공데이터_analysis_yoon.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "10854935-8787-41ef-b5f6-f5022155bc3a",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "8490fce1-e931-49d8-9eea-d4d20c0a766a",
    "metadata": {
     "scrolled": true
@@ -383,7 +383,7 @@
        "[11652 rows x 130 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "172723d1-098a-4ab6-a922-e47a8ab5503e",
    "metadata": {
     "scrolled": true
@@ -516,7 +516,7 @@
        "[159 rows x 3 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "f253f67d-7f0a-46b4-af95-946642701eee",
    "metadata": {},
    "outputs": [
@@ -551,7 +551,7 @@
        "      dtype='object', length=130)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "f6468ea3-a13c-42c6-b682-492e099a63b5",
    "metadata": {},
    "outputs": [
@@ -754,7 +754,7 @@
        "[5 rows x 130 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "id": "bbfc43d1-9b75-43ca-9eb1-b21146124b0e",
    "metadata": {},
    "outputs": [
@@ -964,7 +964,7 @@
        "[5 rows x 130 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -983,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "id": "ac048c89-4a34-4f35-9a21-df54f39c12b9",
    "metadata": {
     "scrolled": true
@@ -1140,7 +1140,7 @@
        "[11652 rows x 6 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1154,7 +1154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "id": "e23e35a8-17ff-407d-99b9-d7383b16d927",
    "metadata": {},
    "outputs": [
@@ -1309,7 +1309,7 @@
        "[11652 rows x 6 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1331,28 +1331,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 17,
    "id": "f217b6ed-3e32-44ba-a753-49a0e33951d9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "이직여부             0\n",
-       "majorcat         0\n",
-       "school           0\n",
-       "area             0\n",
-       "sex              0\n",
-       "                ..\n",
-       "r025             0\n",
-       "r026             0\n",
-       "r027             0\n",
-       "wt               0\n",
-       "is_job_change    0\n",
-       "Length: 131, dtype: int64"
+       "이직여부        0\n",
+       "majorcat    0\n",
+       "school      0\n",
+       "area        0\n",
+       "sex         0\n",
+       "           ..\n",
+       "r024        0\n",
+       "r025        0\n",
+       "r026        0\n",
+       "r027        0\n",
+       "wt          0\n",
+       "Length: 130, dtype: int64"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1363,7 +1363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 18,
    "id": "544687ae-ef67-4e63-8f94-8ffdddf006dc",
    "metadata": {
     "scrolled": true
@@ -1401,6 +1401,7 @@
        "      <th>industry</th>\n",
        "      <th>job</th>\n",
        "      <th>...</th>\n",
+       "      <th>p039</th>\n",
        "      <th>p041</th>\n",
        "      <th>p043</th>\n",
        "      <th>p045</th>\n",
@@ -1410,7 +1411,6 @@
        "      <th>r026</th>\n",
        "      <th>r027</th>\n",
        "      <th>wt</th>\n",
-       "      <th>is_job_change</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1680,7 +1680,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>11652 rows × 131 columns</p>\n",
+       "<p>11652 rows × 130 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1697,23 +1697,23 @@
        "11650   NaN       NaN     NaN   NaN  NaN  NaN     NaN   NaN       NaN  NaN   \n",
        "11651   NaN       NaN     NaN   NaN  NaN  NaN     NaN   NaN       NaN  NaN   \n",
        "\n",
-       "       ...  p041  p043  p045  r023  r024  r025  r026  r027  wt  is_job_change  \n",
-       "0      ...   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN NaN            NaN  \n",
-       "1      ...   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN NaN            NaN  \n",
-       "2      ...   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN NaN            NaN  \n",
-       "3      ...   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN NaN            NaN  \n",
-       "4      ...   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN NaN            NaN  \n",
-       "...    ...   ...   ...   ...   ...   ...   ...   ...   ...  ..            ...  \n",
-       "11647  ...   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN NaN            NaN  \n",
-       "11648  ...   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN NaN            NaN  \n",
-       "11649  ...   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN NaN            NaN  \n",
-       "11650  ...   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN NaN            NaN  \n",
-       "11651  ...   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN NaN            NaN  \n",
+       "       ...  p039  p041  p043  p045  r023  r024  r025  r026  r027  wt  \n",
+       "0      ...   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN NaN  \n",
+       "1      ...   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN NaN  \n",
+       "2      ...   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN NaN  \n",
+       "3      ...   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN NaN  \n",
+       "4      ...   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN NaN  \n",
+       "...    ...   ...   ...   ...   ...   ...   ...   ...   ...   ...  ..  \n",
+       "11647  ...   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN NaN  \n",
+       "11648  ...   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN NaN  \n",
+       "11649  ...   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN NaN  \n",
+       "11650  ...   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN NaN  \n",
+       "11651  ...   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN NaN  \n",
        "\n",
-       "[11652 rows x 131 columns]"
+       "[11652 rows x 130 columns]"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1756,7 +1756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 21,
    "id": "0bac23bb-f919-415a-86f8-d8e7d05883f8",
    "metadata": {},
    "outputs": [],
@@ -1782,7 +1782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 22,
    "id": "4d96fa2f-c61c-492b-8ae2-febe12d42e50",
    "metadata": {
     "scrolled": true
@@ -1864,7 +1864,7 @@
        "6         7         0.762522"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1875,7 +1875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 23,
    "id": "bf1e6493-96da-40df-9d62-810110293809",
    "metadata": {},
    "outputs": [
@@ -1931,7 +1931,7 @@
        "2       3         0.954315"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1942,7 +1942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 24,
    "id": "4e99b3b1-3ff3-4a5f-82c7-a4698fe07291",
    "metadata": {
     "scrolled": true
@@ -2084,7 +2084,7 @@
        "16    17         0.715789"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2095,7 +2095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 25,
    "id": "eaae4ae5-4c3d-4d16-8dd1-342aaee4e4d5",
    "metadata": {},
    "outputs": [
@@ -2145,7 +2145,7 @@
        "1    2         0.764778"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2156,7 +2156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 26,
    "id": "5b2ea306-d016-443c-aa38-22b20c987b7d",
    "metadata": {},
    "outputs": [
@@ -2166,7 +2166,7 @@
        "<Axes: xlabel='majorcat', ylabel='job_change_rate'>"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2198,7 +2198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 28,
    "id": "14330e8d-4179-451c-9104-c973b91deae4",
    "metadata": {},
    "outputs": [
@@ -2208,7 +2208,7 @@
        "<Axes: xlabel='school', ylabel='job_change_rate'>"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2240,7 +2240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 30,
    "id": "b87ba669-44ee-447f-acf0-30223b6ed57a",
    "metadata": {},
    "outputs": [
@@ -2250,7 +2250,7 @@
        "<Axes: xlabel='area', ylabel='job_change_rate'>"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2272,7 +2272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 31,
    "id": "d6e30d8d-c0d6-4483-ae92-d4150933b104",
    "metadata": {},
    "outputs": [
@@ -2282,7 +2282,7 @@
        "<Axes: xlabel='sex', ylabel='job_change_rate'>"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2320,7 +2320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 34,
    "id": "0de7bba7-f747-43d7-8bab-80fa20eb4fef",
    "metadata": {
     "scrolled": true
@@ -2602,7 +2602,7 @@
        "29         7       2    2         0.751908"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2634,7 +2634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 36,
    "id": "7ae9f627-3ce7-4d20-ba82-a0589a5a2ff9",
    "metadata": {},
    "outputs": [
@@ -2684,7 +2684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 39,
    "id": "739e9ff8-9287-4f7a-8ebc-27c03d80aae5",
    "metadata": {},
    "outputs": [
@@ -2719,7 +2719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 41,
    "id": "f8e181e5-87ac-420a-a12b-d16ec9ea1e95",
    "metadata": {},
    "outputs": [
@@ -2773,7 +2773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 45,
    "id": "dc418d9d-f249-4444-9ad2-6e052812105c",
    "metadata": {},
    "outputs": [
@@ -2815,7 +2815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 46,
    "id": "dff06d49-a598-44c4-85c9-e40f62b7d454",
    "metadata": {},
    "outputs": [
@@ -2864,7 +2864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 48,
    "id": "868aaf96-337a-43b1-bd02-b25fac37df5e",
    "metadata": {},
    "outputs": [],
@@ -2884,7 +2884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 49,
    "id": "c85153d4-0f11-439f-b1a4-c3fd9d1bc83f",
    "metadata": {},
    "outputs": [
@@ -3102,7 +3102,7 @@
        "6  3.380829  3.484456  3.602763  "
       ]
      },
-     "execution_count": 143,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3113,7 +3113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 50,
    "id": "7d52f695-fc80-439b-b8e3-02b99837238b",
    "metadata": {},
    "outputs": [
@@ -3676,7 +3676,7 @@
        "21  3.333333  3.666667  3.666667  "
       ]
      },
-     "execution_count": 145,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3687,7 +3687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 51,
    "id": "6dac1bb7-85e9-4504-be0a-ddd55d9678cd",
    "metadata": {},
    "outputs": [
@@ -3997,7 +3997,7 @@
        "10  3.828947  3.868421  "
       ]
      },
-     "execution_count": 147,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4008,7 +4008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 52,
    "id": "6b73ff4a-bed1-4450-a6eb-c62bc83aa095",
    "metadata": {},
    "outputs": [
@@ -4029,10 +4029,10 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "plt.figure(figsize=(14, 8))\n",
-    "bar_width = 0.075  # 막대의 너비 조정\n",
-    "x = np.arange(len(major_satis['majorcat'])) * 1.5  # 막대 간의 간격을 넓히기 위한 x값 조정\n",
+    "bar_width = 0.075  \n",
+    "x = np.arange(len(major_satis['majorcat'])) * 1.5  \n",
     "\n",
-    "# 각 막대를 그립니다.\n",
+    "\n",
     "for i, column in enumerate(satis_df1):\n",
     "    plt.bar(x + i * bar_width, major_satis[column], width=bar_width, label=column)\n",
     "\n",
